--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Davi Lopes",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mongodb": "^6.3.0",
